# Indonesia-GeoMAD

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-push.yml
argo/: stats-gm-s2.yaml  template-gm-s2-r4xlarge.yaml  template-gm-s2.yaml  test-A.yaml
argo/test/: test-a-100.yaml  test-a-80.yaml
config/argo_workflows/: create-mosaic.yaml  geomad-2025-v1.yaml  geomad-2025.yaml  template-gm-s2-r4xlarge.yaml  template-gm-s2-r8xlarge.yaml  template-gm-s2.yaml
config/argo_workflows/test/: test-a-60.yaml  test-b.yaml  test-c.yaml
config/geomad_config/: main_config.yaml  plugin_config.yaml
config/geomad_config/v1/: main_config.yaml  plugin_config.yaml
config/hltc_config/: main_config.yaml  plugin_config.yaml
docker/: Dockerfile  distributed.yaml  entrypoint.sh
docs/: Cost-and-resources-estimation.md  cloud_cover_comparison.md
geomad_config/: README.md  gm_s2.yaml
notebook/: Cost-and-resources-estimation.md  GeoMAD_tests.ipynb  Indonesia_GeoMAD.ipynb  Indonesia_tidal_composites_stats.ipynb  Load_GeoMAD_stac.ipynb  Tiles_Filtering.ipynb  _config.yml  cloud_cover_comparison.md  main_config.yaml  patch_odc_stats.py  plugin_config.yaml  tilelist.csv
project/: myst.yml  plan.md
scripts/: count_objects.sh
src/: create_low_res_mosaic.py
src/hltc/: __init__.py  hltc_plugin.py
src/low_res_mosaic/: __init__.py  low_res_mosaic.py
