[project]
name = "indonesia-geomad"
version = "0.1.0"
description = "Indonesia GeoMAD Development Env"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "odc-stats @ git+https://github.com/piksel-ina/odc-stats.git@3721289469dbaf6c08d6bf81565c245ab8cb323a",
    "odc-stac==0.4.0",
    "pandas",
    "netcdf4",
    "scipy>=1.13,<1.15",
    "numpy>=2.0,<2.3",
    "hdstats>=0.2.1",
    "matplotlib",
    "psycopg2-binary>=2.9.11",
    "ipykernel>=7.1.0",
    "geopandas>=1.1.1",
    "aiohttp>=3.9.0,<4.0.0",
    "aiobotocore>=2.11.0",
    "contextily>=1.6.2",
    "jupyter-book>=2.0.0a0",
    "xarray>=2025.11.0",
    "rasterio>=1.4.3",
    "rioxarray>=0.20.0",
    "folium>=0.20.0",
    "pystac-client>=0.9.0",
    "mapclassify>=2.10.0",
]

[tool.uv]
prerelease = "allow"

