[project]
name = "indonesia-geomad"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

dependencies = [
  "odc-stats @ git+https://github.com/piksel-ina/odc-stats.git@39b34ff6c25fcf50ac351f71f208745cd85f9a40",
  "odc-stac==0.4.0",
  "datacube==1.9.10",
  "gdal==3.12.0.post1",
  "numpy>=2.0,<2.3",
  "scipy>=1.13,<1.15",
  "pandas",
  "xarray>=2025.11.0",
  "rasterio>=1.4.3",
  "rioxarray>=0.20.0",
  "netcdf4",
  "geopandas>=1.1.1",
  "psycopg2-binary>=2.9.11",
  "aiohttp>=3.9.0,<4.0.0",
  "aiobotocore>=2.11.0",
  "pystac-client>=0.9.0",
  "hdstats>=0.2.1",
  "mapclassify>=2.10.0",
  "scikit-image<0.26"
]

[project.optional-dependencies]
notebook = [
  "ipykernel>=7.1.0",
  "matplotlib",
  "folium>=0.20.0",
  "contextily>=1.6.2",
  "jupyter-book>=2.0.0a0",
]

[tool.uv]
prerelease = "allow"
