[project]
name = "indonesia-geomad"
version = "0.1.0"
requires-python = ">=3.12,<3.13"

dependencies = [
  "odc-stats @ git+https://github.com/piksel-ina/odc-stats.git@df63d319fd534e29a4f1e27598fa280e387fc027",
  "odc-stac>=0.5.0",
  "datacube==1.9.18",
  "gdal==3.13.1",
  "numpy>=2.0,<2.3",
  "scipy>=1.13,<1.15",
  "pandas",
  "xarray>=2025.11.0",
  "rasterio>=1.4.3",
  "rioxarray>=0.20.0",
  "netcdf4",
  "geopandas>=1.1.1",
  "psycopg2-binary>=2.9.11",
  "aiohttp>=3.9.0,<4.0.0",
  "aiobotocore>=2.11.0",
  "pystac-client>=0.9.0",
  "boto3",
  "hdstats>=0.2.1",
  "mapclassify>=2.10.0",
  "scikit-image<0.26",
  "eo-tides",
  "pyTMD>=2.2.8",
  "h5py==3.14.0",
  "bottleneck",
  "click>=8.0.0",
  "pystac>=1.1.0",
  "rio-stac>=0.9.0",
  "odc-algo>=1.0.1,<1.1",
  "odc-cloud>=0.2.5",
  "odc-geo>=0.5.0",
]

[project.optional-dependencies]
notebook = [
  "ipykernel>=7.1.0",
  "matplotlib",
  "folium>=0.20.0",
  "contextily>=1.6.2",
  "jupyter-book>=2.0.0a0",
]

[tool.uv]
prerelease = "allow"
required-environments = [
    # Without this, `uv sync` fails.
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
create-mosaic = "low_res_mosaic.low_res_mosaic:cli"
